force-app/main/default/objects/Subscription_Event__e/Subscription_Event__e.object-meta.xml
<CustomObject>
    <description>Platform event for subscription lifecycle changes and external system integration</description>
    <label>Subscription Event</label>
    <pluralLabel>Subscription Events</pluralLabel>
</CustomObject>