force-app/main/default/objects/Subscription_Event__e/fields/External_System_Id__c.field-meta.xml
<CustomField>
    <fullName>External_System_Id__c</fullName>
    <description>External system identifier for integration tracking</description>
    <label>External System ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>