force-app/main/default/objects/Subscription_Event__e/fields/Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Id__c</fullName>
    <description
  >ID of the subscription record that triggered the event</description>
    <label>Subscription ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>